--- a/Udon/Editor/UdonStarterKit.Udon.Editor.asmdef
+++ b/Udon/Editor/UdonStarterKit.Udon.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "UdonStarterKit.Editor",
+    "name": "UdonStarterKit.Udon.Editor",
     "references": [
         "GUID:3c1bc1267eab5884ebe7f232c09ee0d9",
         "GUID:99835874ee819da44948776e0df4ff1d",
